# cpp_lessons

./: *cmake-tools*  .gitignore  1.md  CMakeLists.txt  compile_commands.json  dump.txt  out
1/: 1.md
10/: 10.cpp
11/: 11_1.cpp  11_2.cpp
2/: 2.md
3/: 3.cpp  3.md
5/: 5
6/: 6.cpp
7/: 7.cpp
8/: 8.cpp
9/: 9.cpp
code/1/: 1.cpp
year_10/: a.out
year_10/1/: 1_1.cpp  1_2.cpp
year_10/11/: CMakeLists.txt
year_10/11/src/: 1.cpp  2.cpp
year_10/12/: CMakeLists.txt
year_10/12/src/: 1.cpp
year_10/2/: 2_1.cpp  2_2.cpp  2_3.cpp  2_4.cpp  2_5.cpp  2_6.cpp  2_7.cpp  CMakeLists.txt
year_10/3/: CMakeLists.txt
year_10/3/src/: 3_1.cpp  3_2.cpp  3_3.cpp  3_4.cpp
year_10/4/: CMakeLists.txt
year_10/4/src/: 4_1.cpp  4_2.cpp  4_3.cpp  4_4.cpp
year_10/5/: CMakeLists.txt
year_10/5/include/: func.h
year_10/5/src/: func.cpp  main.cpp
year_10/6/: CMakeLists.txt  a.out  dump
year_10/6/include/: func.hpp
year_10/6/src/: 6_1.cpp  6_2.cpp  6_3.cpp
year_10/7/: CMakeLists.txt  a.out
year_10/7/include/: func.hpp  func2.hpp
year_10/7/src/: 7_1.cpp  7_2.cpp  7_3.cpp  7_4.cpp  func.cpp
year_10/8/: CMakeLists.txt
year_10/8/src/: 8_1.cpp
year_10/9/: CMakeLists.txt  in.txt
year_10/9/src/: 9_1.cpp  9_2.cpp  9_3.cpp  9_4.cpp
year_9/1/: 1.cpp
year_9/10/: 10_1.cpp  10_2.cpp
year_9/11/: 11_3.cpp  11_4.cpp
year_9/2/: 2.cpp
year_9/4/: 4.cpp
year_9/5/: 5.cpp
year_9/6/: 6.cpp
year_9/7/: 7.cpp
year_9/8/: 8.cpp
