cmake_minimum_required(VERSION 3.26)
project(pluses)

set(CMAKE_CXX_FLAGS, "-O2 -Wall -Werror -Wpedantic -m64 -fsanitize=leak,undefined,address")

add_executable(1 1/1.cpp)
add_executable(2 2/2.cpp)
add_executable(3 3/3.cpp)
add_executable(4 4/4.cpp)
add_executable(5 5/5.cpp)
add_executable(6 6/6.cpp)
add_executable(7 7/7.cpp)
add_executable(8 8/8.cpp)
add_executable(9 9/9.cpp)
add_executable(10_1 10/10_1.cpp)
add_executable(10_2 10/10_2.cpp)
add_executable(11_1 11/11_1.cpp)
add_executable(11_2 11/11_2.cpp)

find_package(cpr REQUIRED)
target_link_libraries(11 cpr)
